[project]
name = "pytest-mg"
dynamic = ["version"]
description = "A tiny plugin for pytest which runs MongoDB in Docker"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Taras Drapalyuk", email = "taras@drapalyuk.com"},
]
requires-python = ">=3.10"
dependencies = [
    "docker>=7.0.0",
    "pytest>=8.0",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pytest",
]

[project.urls]
Homepage = "https://github.com/anna-money/pytest-mongo"

[project.entry-points.pytest11]
pytest_mg = "pytest_mg"

[project.optional-dependencies]
dev = [
    "mypy==2.0.0",
    "pymongo==4.17.0",
    "pytest==9.0.3",
    "ruff==0.15.12",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["pytest_mg"]

[tool.hatch.build.targets.sdist]
include = [
    "pytest_mg",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "RUF",  # ruff
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "G",    # flake8-logging-format
    "T20",  # flake8-print
    "UP",   # pyupgrade
]
