[project]
name = "pytest-mongo-docker"
dynamic = ["version"]
description = "A tiny plugin for pytest which runs MongoDB in Docker"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "pytest",
    "pytest-plugin",
    "mongo",
    "mongodb",
    "docker",
    "fixtures",
    "testing",
    "replica-set",
]
authors = [
    {name = "Taras Drapalyuk", email = "taras@drapalyuk.com"},
]
requires-python = ">=3.10"
dependencies = [
    "docker>=7.0.0",
    "pytest>=8.0",
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pytest",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/anna-money/pytest-mongo-docker"

[project.entry-points.pytest11]
pytest_mongo_docker = "pytest_mongo_docker"

[project.optional-dependencies]
dev = [
    "mypy==2.0.0",
    "pymongo==4.17.0",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "ruff==0.15.15",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["pytest_mongo_docker"]

[tool.hatch.build.targets.sdist]
include = [
    "pytest_mongo_docker",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "RUF",  # ruff
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "G",    # flake8-logging-format
    "T20",  # flake8-print
    "UP",   # pyupgrade
]

[tool.coverage.run]
source = ["pytest_mongo_docker"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
